# Kolektor

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .hadolint.yaml  CLAUDE.md  Dockerfile  README.md  entrypoint.sh
.github/workflows/: ci.yml  security.yml
_lib/: sinks.toml
_schema/: README.md  ports.md  template.toml
api/: Cargo.toml  deny.toml
api/.cargo/: audit.toml
api/crates/kolektor-api/: Cargo.toml
api/crates/kolektor-api/src/: config.rs  config_writer.rs  error.rs  init.rs  main.rs  middleware.rs  serve.rs  state.rs  token.rs
api/crates/kolektor-api/src/routes/: fetchers.rs  health.rs  mod.rs  parsers.rs  status.rs
api/crates/kolektor-common/: Cargo.toml
api/crates/kolektor-common/src/: db.rs  models.rs
api/crates/kolektor-fetcher/: Cargo.toml
api/crates/kolektor-fetcher/src/: main.rs
api/crates/kolektor-seed/: Cargo.toml
api/crates/kolektor-seed/src/: lib.rs
api/migrations/: 20260419120000_init.sql  20260422120000_add_parser_ocsf_outputs.sql  20260422220000_add_fetchers.sql
catalog/: index.json
catalog/cloud/aws-cloudtrail/: README.md  manifest.yaml  vector.toml
catalog/cloud/aws-cloudtrail/tests/: console_login.toml  malformed.toml  unauthorized_access.toml
catalog/cloud/kubernetes-audit/: README.md  manifest.yaml  vector.toml
catalog/cloud/kubernetes-audit/tests/: malformed.toml  nominal.toml  optional_missing.toml
catalog/cloud/microsoft-365-audit/: README.md  manifest.yaml  vector.toml
catalog/cloud/microsoft-365-audit/tests/: exchange_admin.toml  failure.toml  malformed.toml  sharepoint_file.toml
catalog/endpoint/crowdsec/: README.md  manifest.yaml  vector.toml
catalog/endpoint/crowdsec/tests/: malformed.toml  nominal.toml  optional_missing.toml  remediation_only.toml
catalog/endpoint/crowdstrike-falcon/: README.md  manifest.yaml  vector.toml
catalog/endpoint/crowdstrike-falcon/tests/: detection_summary.toml  malformed.toml  network_containment.toml  process_rollup.toml
catalog/endpoint/falco/: README.md  manifest.yaml  vector.toml
catalog/endpoint/falco/tests/: malformed.toml  nominal.toml  optional_missing.toml
catalog/endpoint/microsoft-defender-endpoint/: README.md  manifest.yaml  vector.toml
catalog/endpoint/microsoft-defender-endpoint/tests/: malformed.toml  nominal.toml  optional_missing.toml
catalog/identity/google-workspace/: README.md  manifest.yaml  vector.toml
catalog/identity/google-workspace/tests/: admin_account_change.toml  malformed.toml  nominal.toml  optional_missing.toml
catalog/identity/microsoft-entra/: README.md  manifest.yaml  vector.toml
catalog/identity/microsoft-entra/tests/: directory_audit.toml  malformed.toml  signin_failure.toml  signin_success.toml
catalog/identity/okta/: README.md  manifest.yaml  vector.toml
catalog/identity/okta/tests/: account_change.toml  api_activity.toml  malformed.toml  nominal.toml  optional_missing.toml
catalog/identity/windows-security-evtx/: README.md  manifest.yaml  vector.toml
catalog/identity/windows-security-evtx/tests/: logoff_4634.toml  logon_failed_4625.toml  logon_success_4624.toml  malformed.toml  nxlog_logon_4624.toml  optional_missing.toml  process_4688.toml
catalog/identity/windows-sysmon/: README.md  manifest.yaml  vector.toml
catalog/identity/windows-sysmon/tests/: dns_query.toml  malformed.toml  module_load.toml  network_connection.toml  process_create.toml
catalog/linux/auditd/: README.md  manifest.yaml  vector.toml
catalog/linux/auditd/tests/: malformed.toml  optional_missing.toml  syscall_execve.toml  syscall_failed.toml  user_auth.toml  user_auth_failed.toml
catalog/linux/auth-log/: README.md  manifest.yaml  vector.toml
catalog/linux/auth-log/tests/: malformed.toml  optional_missing.toml  ssh_accepted.toml  ssh_failed.toml  sudo.toml
catalog/linux/postfix/: README.md  manifest.yaml  vector.toml
catalog/linux/postfix/tests/: malformed.toml  nominal.toml  optional_missing.toml
catalog/linux/syslog/: README.md  manifest.yaml  vector.toml
catalog/linux/syslog/tests/: high_severity.toml  malformed.toml  nominal.toml  optional_missing.toml
catalog/network/fortinet-fortigate/: README.md  manifest.yaml  vector.toml
catalog/network/fortinet-fortigate/tests/: malformed.toml  optional_missing.toml  traffic_accept.toml  traffic_deny.toml
catalog/network/opnsense/: README.md  manifest.yaml  vector.toml
catalog/network/opnsense/tests/: filterlog_block.toml  filterlog_ipv6.toml  filterlog_pass.toml  malformed.toml  optional_missing.toml
catalog/network/suricata-eve/: README.md  manifest.yaml  vector.toml
catalog/network/suricata-eve/tests/: alert.toml  dns.toml  flow.toml  http.toml  malformed.toml
catalog/network/unbound/: README.md  manifest.yaml  vector.toml
catalog/network/unbound/tests/: malformed.toml  nominal.toml  optional_missing.toml
catalog/network/zeek/: README.md  manifest.yaml  vector.toml
catalog/network/zeek/tests/: conn.toml  dns.toml  http.toml  malformed.toml  optional_missing.toml  ssl.toml
catalog/web/cloudflare-http/: README.md  manifest.yaml  vector.toml
catalog/web/cloudflare-http/tests/: malformed.toml  nominal.toml  unixnano_timestamp.toml  waf_block.toml
catalog/web/nginx/: README.md  manifest.yaml  vector.toml
catalog/web/nginx/tests/: access_200.toml  access_403_500.toml  malformed.toml  optional_missing.toml
catalog/web/traefik/: README.md  manifest.yaml  vector.toml
catalog/web/traefik/tests/: malformed.toml  nominal.toml  optional_missing.toml
ci/: catalog_index.py  coverage.sh  lint_vrl.py  report.py  test.sh  validate.sh  validate_ocsf.py
docs/: CI.md  FETCHERS.md  decisions.md  ocsf-conventions.md
init/: create-indexes.sh
init/indexes/: ocsf-audit.json  ocsf-dns.json  ocsf-endpoint.json  ocsf-http.json  ocsf-identity.json  ocsf-k8s.json  ocsf-network.json  raw-logs.json
