[workspace]
resolver = "2"
members = [
    "crates/kolektor-api",
    "crates/kolektor-common",
    "crates/kolektor-fetcher",
    "crates/kolektor-seed",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
toml = "0.8"
regex = "1"
bcrypt = "0.15"
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"
futures = "0.3"
object_store = { version = "0.12", features = ["aws"] }
flate2 = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
