[package]
name = "kolektor-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kolektor — API REST de gestion des parsers Vector"

[[bin]]
name = "kolektor-api"
path = "src/main.rs"

[dependencies]
kolektor-common = { version = "0.1.0", path = "../kolektor-common" }
kolektor-seed = { version = "0.1.0", path = "../kolektor-seed" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
khronika = { version = "0.1.0", git = "https://github.com/komrad-company/Khronika.git" }
thiserror = { workspace = true }
bcrypt = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
toml.workspace = true
