[package]
name = "kolektor-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Types, DB pool et helpers partagés entre kolektor-api et kolektor-seed"

[dependencies]
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
