[package]
name = "kolektor-fetcher"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pull fetchers for cloud/SaaS logs feeding Kolektor Vector parsers"

[[bin]]
name = "kolektor-fetcher"
path = "src/main.rs"

[dependencies]
kolektor-common = { path = "../kolektor-common" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
flate2 = { workspace = true }
