[package]
name = "kolektor-seed"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Import du catalog Git (TOML Vector) vers la DB Kolektor"

[dependencies]
kolektor-common = { path = "../kolektor-common" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde_yaml = "0.9.34"
